Completed hydrator for category data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,26 +20,31 @@
     <string name="antipattern_category_0_title">Category 1</string>
     <string-array name="antipattern_category_0_items">
         <item>0</item>
+        <item>1</item>
     </string-array>
 
     <string name="antipattern_category_1_title">Category 2</string>
     <string-array name="antipattern_category_1_items">
         <item>1</item>
+        <item>2</item>
     </string-array>
 
     <string name="antipattern_category_2_title">Category 3</string>
     <string-array name="antipattern_category_2_items">
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <string name="antipattern_category_3_title">Category 4</string>
     <string-array name="antipattern_category_3_items">
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <string name="antipattern_category_4_title">Category 5</string>
     <string-array name="antipattern_category_4_items">
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- antipattern items -->
