Minor bugfixed and coding style improvements.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,6 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
-        <item>5</item>
     </string-array>
 
     <string name="antipattern_category_0_title">Management</string>
@@ -24,7 +23,7 @@
         <item>16</item>
         <item>17</item>
         <item>19</item>
-        <item>20</item>    
+        <item>20</item>
     </string-array>
 
     <string name="antipattern_category_1_title">Team</string>
@@ -39,7 +38,7 @@
         <item>13</item>
         <item>15</item>
         <item>19</item>
-        <item>20</item>  
+        <item>20</item>
     </string-array>
 
     <string name="antipattern_category_2_title">Product Owner</string>
@@ -54,7 +53,7 @@
         <item>15</item>
         <item>16</item>
         <item>17</item>
-        <item>20</item>    
+        <item>20</item>
     </string-array>
 
     <string name="antipattern_category_3_title">Scrum Master</string>
@@ -73,7 +72,7 @@
         <item>16</item>
         <item>18</item>
         <item>19</item>
-        <item>20</item>    
+        <item>20</item>
     </string-array>
 
     <string name="antipattern_category_4_title">Prozess</string>
@@ -81,7 +80,7 @@
         <item>3</item>
         <item>14</item>
         <item>17</item>
-        <item>18</item>    
+        <item>18</item>
     </string-array>
 
     <!-- antipattern items -->
@@ -111,7 +110,7 @@
     </string-array>
     <string-array name="antipattern_2_remedies">
         <item>Führe ein Story Mapping Workshop durch, um Deine Stories von den Zielen Deiner Personas ableiten zu können.</item>
-    </string-array>  
+    </string-array>
 
     <string name="antipattern_3_title">Scrummerfall</string>
     <string-array name="antipattern_3_problems">
@@ -120,8 +119,8 @@
     <string-array name="antipattern_3_remedies">
         <item>Halte die Zeit für die Planung kurz.</item>
         <item>Fokussiere Dich auf die Fertigstellung der User Stories.</item>
-        <item>Nutze (und optimiere gegebenenfalls) Metriken wie die Cycle Time.</item>    
-    </string-array> 
+        <item>Nutze (und optimiere gegebenenfalls) Metriken wie die Cycle Time.</item>
+    </string-array>
 
     <string name="antipattern_4_title">Waterscrum</string>
     <string-array name="antipattern_4_problems">
@@ -129,7 +128,7 @@
     </string-array>
     <string-array name="antipattern_4_remedies">
         <item>Gestalte das Risikomanagement mit schnellen Releases.</item>
-        <item>Orientiere Dich dazu am Kundenfeedback.</item>    
+        <item>Orientiere Dich dazu am Kundenfeedback.</item>
     </string-array>
 
     <string name="antipattern_5_title">Use Case Stories</string>
@@ -144,11 +143,11 @@
     <string name="antipattern_6_title">Implicit Leadership</string>
     <string-array name="antipattern_6_problems">
         <item>Das Team richtet sich allein nach dem anerkannten Kollegen, ohne Commitment auf die konkrete Implemen­tierung; auch um Konfliktsitu­ationen zu vermeiden.</item>
-        <item>Es gibt keinen teamübergrei­fenden Know-how-Aufbau.</item>    
+        <item>Es gibt keinen teamübergrei­fenden Know-how-Aufbau.</item>
     </string-array>
     <string-array name="antipattern_6_remedies">
         <item>Trefft Entscheidungen gemeinsam.</item>
-        <item>Nutzt Pair Programming. Nutzt  agiles Modelling.</item>    
+        <item>Nutzt Pair Programming. Nutzt  agiles Modelling.</item>
     </string-array>
 
     <string name="antipattern_7_title">Group Thinking</string>
@@ -156,7 +155,7 @@
         <item>Im Meeting werden  eigene Meinungen an die Gruppenmeinung angepasst – und so neue Impulse durch individuelle Einschätzungen gedämpft.</item>
     </string-array>
     <string-array name="antipattern_7_remedies">
-        <item>Nutzt neutrale Abstimmungsverfahren wie das verdeckte Dot Voting oder Kartendecks.</item>   
+        <item>Nutzt neutrale Abstimmungsverfahren wie das verdeckte Dot Voting oder Kartendecks.</item>
     </string-array>
 
     <string name="antipattern_8_title">Group Narcissism</string>
@@ -165,18 +164,18 @@
     </string-array>
     <string-array name="antipattern_8_remedies">
         <item>Arbeite  mit anderen Teams zusammen, oder stellt Euch gemeinsame Ziele auf.</item>
-        <item>Nutze Slacktime, interne Barcamps und andere Gelegenheiten, Dich mit Kollegen anderer Teams auszutauschen.</item>    
-    </string-array>  
+        <item>Nutze Slacktime, interne Barcamps und andere Gelegenheiten, Dich mit Kollegen anderer Teams auszutauschen.</item>
+    </string-array>
 
     <string name="antipattern_9_title">Mushroom Management</string>
     <string-array name="antipattern_9_problems">
         <item>Der kurz-, mittel- und langfristige Ausblick an die Anforderungen ist unklar.</item>
-        <item>Man bespricht strategische Änderungen ohne das Team und informiert es oft nach­träglich.</item>    
+        <item>Man bespricht strategische Änderungen ohne das Team und informiert es oft nach­träglich.</item>
     </string-array>
     <string-array name="antipattern_9_remedies">
         <item>Halte die Produkt-Roadmap transparent.</item>
         <item>Achte auf ein DEEP-Backlog.</item>
-        <item>Berücksichtige strategische Änderungen im Grooming.</item>    
+        <item>Berücksichtige strategische Änderungen im Grooming.</item>
     </string-array>
 
     <string name="antipattern_10_title">Scrum Mum</string>
@@ -185,7 +184,7 @@
     </string-array>
     <string-array name="antipattern_10_remedies">
         <item>Der Scrum Master fördert die Autonomie, den Informationsfluss und die Weiterentwicklung des Teams.</item>
-        <item>Der Scrum Master stützt mit Herausforderungen, statt Aufmerksamkeiten.</item>    
+        <item>Der Scrum Master stützt mit Herausforderungen, statt Aufmerksamkeiten.</item>
     </string-array>
 
     <string name="antipattern_11_title">Need for Guidance</string>
@@ -194,13 +193,13 @@
     </string-array>
     <string-array name="antipattern_11_remedies">
         <item>Arbeite an einem gemein­samen mentalen Modell für Vision und Ziel des Produkts.</item>
-        <item>Scrum Master und PO er­mutigen das Team, Entschei­dungen zu treffen.</item>    
+        <item>Scrum Master und PO er­mutigen das Team, Entschei­dungen zu treffen.</item>
     </string-array>
 
     <string name="antipattern_12_title">Princess Scrum</string>
     <string-array name="antipattern_12_problems">
         <item>Scrum wird nur als vorüber­gehender Hype gesehen und der Nutzen des Modells verniedlicht.</item>
-        <item>Agile Methoden werden im Grunde abgelehnt.</item>    
+        <item>Agile Methoden werden im Grunde abgelehnt.</item>
     </string-array>
     <string-array name="antipattern_12_remedies">
         <item>Erkläre die Hintergründe der höheren Wertschöpfung mit Scrum sachlich und differen­ziert.</item>
@@ -209,7 +208,7 @@
     <string name="antipattern_13_title">The Epic Release</string>
     <string-array name="antipattern_13_problems">
         <item>Ihr entwickelt zwar agil, aber mit langen Releasezyklen, z.B. quartalsweise.</item>
-        <item>Nutzerfeedback steht Euch dementsprechend nur mit großer Verzögerung zur Verfügung.</item>    
+        <item>Nutzerfeedback steht Euch dementsprechend nur mit großer Verzögerung zur Verfügung.</item>
     </string-array>
     <string-array name="antipattern_13_remedies">
         <item>Führe ein Continuous Deployment ein.</item>
@@ -226,7 +225,7 @@
     <string name="antipattern_15_title">Rubber Band Development</string>
     <string-array name="antipattern_15_problems">
         <item>Ihr entwickelt zwar agil, aber mit langen Releasezyklen, z.B. quartalsweise.</item>
-        <item>Nutzerfeedback steht Euch dementsprechend nur mit großer Verzögerung zur Verfügung.</item>    
+        <item>Nutzerfeedback steht Euch dementsprechend nur mit großer Verzögerung zur Verfügung.</item>
     </string-array>
     <string-array name="antipattern_15_remedies">
         <item>Führe ein Continuous Deployment ein.</item>
@@ -235,20 +234,20 @@
     <string name="antipattern_16_title">Design by Intuition</string>
     <string-array name="antipattern_16_problems">
         <item>Die Produktvision beruht auf intuitiven Einfällen und der Brillianz von Management und Entwicklung.</item>
-        <item>Es gibt keine Kommunikation mit den Endanwendern.</item>    
+        <item>Es gibt keine Kommunikation mit den Endanwendern.</item>
     </string-array>
     <string-array name="antipattern_16_remedies">
         <item>Formuliere gemeinsam mit dem Kunden die Produktvision.</item>
-        <item>Präsentiere und bewerte kontinuierlich die Entwick­lung gegenüber der Vision.</item>    
+        <item>Präsentiere und bewerte kontinuierlich die Entwick­lung gegenüber der Vision.</item>
     </string-array>
-  
+
     <string name="antipattern_17_title">Bigger is better</string>
     <string-array name="antipattern_17_problems">
         <item>Einzelne Funktionalitäten werden kontinuierlich ergänzt, um das Produkt "noch mächtiger", "vollstän­diger" oder "hochwertiger" zu machen. Der Kernnutzen verbessert sich jedoch kaum.</item>
     </string-array>
     <string-array name="antipattern_17_remedies">
         <item>Halte Dich an Prinzipien wie MVP und MMF.</item>
-        <item>Priorisiere die Features und Teile ein Release in kleinere Pre-Releases auf, um früh Feedback zu erhalten.</item>    
+        <item>Priorisiere die Features und Teile ein Release in kleinere Pre-Releases auf, um früh Feedback zu erhalten.</item>
     </string-array>
 
     <string name="antipattern_18_title">Bug Zombies</string>
@@ -258,27 +257,27 @@
     <string-array name="antipattern_18_remedies">
         <item>Mache Bugs transparent.</item>
         <item>Schaffe im Team ein Be­wusstsein für das Bugfixing.</item>
-        <item>Stelle Zeit und Ressourcen für das Bugflxing zur Verfügung.</item>    
+        <item>Stelle Zeit und Ressourcen für das Bugflxing zur Verfügung.</item>
     </string-array>
 
-    <string name="antipattern_19_title">The King's Daily</string>
+    <string name="antipattern_19_title">The King\'s Daily</string>
     <string-array name="antipattern_19_problems">
         <item>Ein Stakeholder (z.B. ein Manager) leitet die Daily Standups, zeigt dabei auf jedes Teammitglied und fragt nach erfolgten Updates.</item>
     </string-array>
     <string-array name="antipattern_19_remedies">
         <item>Erinnere daran, dass das Daily in erster Linie für die Synchronisation des Teams da ist.</item>
-        <item>Bitte weitere Stakeholder, ihre Anliegen außerhalb des Dailies in einem eigenen Termin zu besprechen.</item>    
+        <item>Bitte weitere Stakeholder, ihre Anliegen außerhalb des Dailies in einem eigenen Termin zu besprechen.</item>
     </string-array>
 
     <string name="antipattern_20_title">Joker</string>
     <string-array name="antipattern_20_problems">
         <item>Ihr fahrt Agil nach Hand­buch, aber die versprochene Besserung bleibt aus.</item>
-        <item>Auf agile Coachings wird verzichtet, damit die Arbeit nicht liegenbleibt.</item>    
+        <item>Auf agile Coachings wird verzichtet, damit die Arbeit nicht liegenbleibt.</item>
     </string-array>
     <string-array name="antipattern_20_remedies">
         <item>Frag Mayflower nach einem Team Coaching on the Job.</item>
         <item>Verzeihe uns die schamlose Eigenwerbung.</item>
-        <item>Ehrlich, wir begleiten Dein Team im Projekt und helfen Dir, ohne Dich zu belasten.</item>    
+        <item>Ehrlich, wir begleiten Dein Team im Projekt und helfen Dir, ohne Dich zu belasten.</item>
     </string-array>
 
 </resources>
