--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,7 @@
     <!-- antipattern items -->
 
     <string name="antipattern_0_title">Remote Daily Standup</string>
-    <string-array name="antipattern_0_problems">
+    <string-array name="antipattern_0_symptoms">
         <item>Meetings sind nicht vorbereitet</item>
         <item>Kommunikation läuft in parallelen Chats und Informationen aus Mimik, Gestik und sozialer Interaktion sind nicht möglich.</item>
     </string-array>
@@ -97,7 +97,7 @@
     </string-array>
 
     <string name="antipattern_1_title">Epic User Stories</string>
-    <string-array name="antipattern_1_problems">
+    <string-array name="antipattern_1_symptoms">
         <item>Deine User Stories sind zu groß und umfassen zum Beispiel mehr als nur ein Feature.</item>
     </string-array>
     <string-array name="antipattern_1_remedies">
@@ -105,7 +105,7 @@
     </string-array>
 
     <string name="antipattern_2_title">Technical User Stories</string>
-    <string-array name="antipattern_2_problems">
+    <string-array name="antipattern_2_symptoms">
         <item>Deine User Stories formulieren nicht den wirtschaftlichen Mehrwert, sondern richten sich z.B. nach rein technischen Kriterien.</item>
     </string-array>
     <string-array name="antipattern_2_remedies">
@@ -113,7 +113,7 @@
     </string-array>
 
     <string name="antipattern_3_title">Scrummerfall</string>
-    <string-array name="antipattern_3_problems">
+    <string-array name="antipattern_3_symptoms">
         <item>Im Sprint laufen Planung, Entwicklung und Test sequenziell ab, statt parallel.</item>
     </string-array>
     <string-array name="antipattern_3_remedies">
@@ -123,7 +123,7 @@
     </string-array>
 
     <string name="antipattern_4_title">Waterscrum</string>
-    <string-array name="antipattern_4_problems">
+    <string-array name="antipattern_4_symptoms">
         <item>Die Flexibilität von agilen Methoden wird über ein Risikomanagement mit Meilensteinen (quasi einem Checkpoint-Prozess) eingeschränkt.</item>
     </string-array>
     <string-array name="antipattern_4_remedies">
@@ -132,7 +132,7 @@
     </string-array>
 
     <string name="antipattern_5_title">Use Case Stories</string>
-    <string-array name="antipattern_5_problems">
+    <string-array name="antipattern_5_symptoms">
         <item>User Stories sind bereits so detailliert vorgegeben, dass das Team sie als Vorgabe sieht und nicht mehr diskutiert.</item>
     </string-array>
     <string-array name="antipattern_5_remedies">
@@ -141,7 +141,7 @@
     </string-array>
 
     <string name="antipattern_6_title">Implicit Leadership</string>
-    <string-array name="antipattern_6_problems">
+    <string-array name="antipattern_6_symptoms">
         <item>Das Team richtet sich allein nach dem anerkannten Kollegen, ohne Commitment auf die konkrete Implemen­tierung; auch um Konfliktsitu­ationen zu vermeiden.</item>
         <item>Es gibt keinen teamübergrei­fenden Know-how-Aufbau.</item>
     </string-array>
@@ -151,7 +151,7 @@
     </string-array>
 
     <string name="antipattern_7_title">Group Thinking</string>
-    <string-array name="antipattern_7_problems">
+    <string-array name="antipattern_7_symptoms">
         <item>Im Meeting werden  eigene Meinungen an die Gruppenmeinung angepasst – und so neue Impulse durch individuelle Einschätzungen gedämpft.</item>
     </string-array>
     <string-array name="antipattern_7_remedies">
@@ -159,7 +159,7 @@
     </string-array>
 
     <string name="antipattern_8_title">Group Narcissism</string>
-    <string-array name="antipattern_8_problems">
+    <string-array name="antipattern_8_symptoms">
         <item>Das Team bleibt lieber unter sich, weil es vom Input anderer nicht viel erwartet. Ein Austausch mit fremden Ideen findet nicht mehr statt.</item>
     </string-array>
     <string-array name="antipattern_8_remedies">
@@ -168,7 +168,7 @@
     </string-array>
 
     <string name="antipattern_9_title">Mushroom Management</string>
-    <string-array name="antipattern_9_problems">
+    <string-array name="antipattern_9_symptoms">
         <item>Der kurz-, mittel- und langfristige Ausblick an die Anforderungen ist unklar.</item>
         <item>Man bespricht strategische Änderungen ohne das Team und informiert es oft nach­träglich.</item>
     </string-array>
@@ -179,7 +179,7 @@
     </string-array>
 
     <string name="antipattern_10_title">Scrum Mum</string>
-    <string-array name="antipattern_10_problems">
+    <string-array name="antipattern_10_symptoms">
         <item>Der Scrum Master kümmert sich mit Aufmerksamkeiten bevorzugt um die Zufrieden­heit des Teams, weniger um dessen Weiterentwicklung.</item>
     </string-array>
     <string-array name="antipattern_10_remedies">
@@ -188,7 +188,7 @@
     </string-array>
 
     <string name="antipattern_11_title">Need for Guidance</string>
-    <string-array name="antipattern_11_problems">
+    <string-array name="antipattern_11_symptoms">
         <item>Das Team erwartet Führung durch Scrum Master und PO, um auf der sicheren Seite zu stehen; es bringt sich wenig in Prozesse abseits konkreter Umsetzung ein.</item>
     </string-array>
     <string-array name="antipattern_11_remedies">
@@ -197,7 +197,7 @@
     </string-array>
 
     <string name="antipattern_12_title">Princess Scrum</string>
-    <string-array name="antipattern_12_problems">
+    <string-array name="antipattern_12_symptoms">
         <item>Scrum wird nur als vorüber­gehender Hype gesehen und der Nutzen des Modells verniedlicht.</item>
         <item>Agile Methoden werden im Grunde abgelehnt.</item>
     </string-array>
@@ -206,7 +206,7 @@
     </string-array>
 
     <string name="antipattern_13_title">The Epic Release</string>
-    <string-array name="antipattern_13_problems">
+    <string-array name="antipattern_13_symptoms">
         <item>Ihr entwickelt zwar agil, aber mit langen Releasezyklen, z.B. quartalsweise.</item>
         <item>Nutzerfeedback steht Euch dementsprechend nur mit großer Verzögerung zur Verfügung.</item>
     </string-array>
@@ -215,7 +215,7 @@
     </string-array>
 
     <string name="antipattern_14_title">Bugfixing Sprint</string>
-    <string-array name="antipattern_14_problems">
+    <string-array name="antipattern_14_symptoms">
         <item>Ein Sprint ist für das Bugfixing reserviert und mit der Planbarkeit ist es dahin.</item>
     </string-array>
     <string-array name="antipattern_14_remedies">
@@ -223,7 +223,7 @@
     </string-array>
 
     <string name="antipattern_15_title">Rubber Band Development</string>
-    <string-array name="antipattern_15_problems">
+    <string-array name="antipattern_15_symptoms">
         <item>Ihr entwickelt zwar agil, aber mit langen Releasezyklen, z.B. quartalsweise.</item>
         <item>Nutzerfeedback steht Euch dementsprechend nur mit großer Verzögerung zur Verfügung.</item>
     </string-array>
@@ -232,7 +232,7 @@
     </string-array>
 
     <string name="antipattern_16_title">Design by Intuition</string>
-    <string-array name="antipattern_16_problems">
+    <string-array name="antipattern_16_symptoms">
         <item>Die Produktvision beruht auf intuitiven Einfällen und der Brillianz von Management und Entwicklung.</item>
         <item>Es gibt keine Kommunikation mit den Endanwendern.</item>
     </string-array>
@@ -242,7 +242,7 @@
     </string-array>
 
     <string name="antipattern_17_title">Bigger is better</string>
-    <string-array name="antipattern_17_problems">
+    <string-array name="antipattern_17_symptoms">
         <item>Einzelne Funktionalitäten werden kontinuierlich ergänzt, um das Produkt "noch mächtiger", "vollstän­diger" oder "hochwertiger" zu machen. Der Kernnutzen verbessert sich jedoch kaum.</item>
     </string-array>
     <string-array name="antipattern_17_remedies">
@@ -251,7 +251,7 @@
     </string-array>
 
     <string name="antipattern_18_title">Bug Zombies</string>
-    <string-array name="antipattern_18_problems">
+    <string-array name="antipattern_18_symptoms">
         <item>Bugs werden nicht mehr kontinuierlich behoben und häufen sich heimlich an.</item>
     </string-array>
     <string-array name="antipattern_18_remedies">
@@ -261,7 +261,7 @@
     </string-array>
 
     <string name="antipattern_19_title">The King\'s Daily</string>
-    <string-array name="antipattern_19_problems">
+    <string-array name="antipattern_19_symptoms">
         <item>Ein Stakeholder (z.B. ein Manager) leitet die Daily Standups, zeigt dabei auf jedes Teammitglied und fragt nach erfolgten Updates.</item>
     </string-array>
     <string-array name="antipattern_19_remedies">
@@ -270,7 +270,7 @@
     </string-array>
 
     <string name="antipattern_20_title">Joker</string>
-    <string-array name="antipattern_20_problems">
+    <string-array name="antipattern_20_symptoms">
         <item>Ihr fahrt Agil nach Hand­buch, aber die versprochene Besserung bleibt aus.</item>
         <item>Auf agile Coachings wird verzichtet, damit die Arbeit nicht liegenbleibt.</item>
     </string-array>
