--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <string name="antipattern_category_0_title">Management</string>
@@ -81,6 +82,10 @@
         <item>14</item>
         <item>17</item>
         <item>18</item>
+    </string-array>
+
+    <string name="antipattern_category_5_title">Top 10 Antipatterns</string>
+    <string-array name="antipattern_category_5_items">
     </string-array>
 
     <!-- antipattern items -->
